Fixed Visible boundary in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1369,6 +1369,14 @@ body.dark-mode .chapter-card:hover {
   background-color: var(--seashell);
   padding: 20px;
   border-radius: var(--radius-5);
+  border: 2px solid hsl(20, 43%, 93%);
+ 
+}
+
+@media (prefers-color-scheme: dark) {
+  .contact-card {
+    border: 2px solid var(--sonic-silver);
+  }
 }
 
 .contact-card .input-field {
